# embedded-game-of-life

./: 1.js  Cargo.toml  index.html  index.js
examples/: simulator.rs.bak  wioterminal.rs
examples/simulator/: Cargo.toml
examples/simulator/src/: main.rs
examples/web/: Cargo.toml  package-lock.json
examples/web/js/: index.js
examples/web/src/: lib.rs
examples/wioterminal/: Cargo.toml
src/: lib.rs
