[package]
name = "embedded-game-of-life"
version = "0.1.0"
authors = ["mackee <macopy123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.0"
rand = { version = "0.8.3", default_features = false, features = ["small_rng"] }
