[package]
name = "simulator"
version = "0.1.0"
authors = ["mackee <macopy123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.2"
embedded-graphics-simulator = "0.2.1"
embedded-game-of-life = { path = "../../" }
