[package]
name = "wioterminal"
version = "0.1.0"
authors = ["mackee <macopy123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.2"
embedded-game-of-life = { path = "../../" }
wio_terminal= "0.3.0"
panic-halt = "0.2"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
nb = "1.0.0"
